objects/Eclipse2__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <label>Test1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testpicklist__c</fullName>
        <label>Testpicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                    <isActive>false</isActive>
                    <label>Value 1</label>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                    <isActive>false</isActive>
                    <label>Value 2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Eclipse2</label>
    <nameField>
        <label>Eclipse2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eclipse2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>